package com.mxdl.desigin.pattern.behavior.a08_command.contract;

/**
 * Description: <ITv><br>
 * Author:      mxdl<br>
 * Date:        2019/12/29<br>
 * Version:     V1.0.0<br>
 * Update:     <br>
 */
public interface ITv {
    void turnOn();
    void turnOff();
    void changeChannel();
}
